fix: add gap to media query for improved layout on smaller screens

--- a/src/app/pages/flyer-creator/flyer-creator.component.scss
+++ b/src/app/pages/flyer-creator/flyer-creator.component.scss
@@ -6,6 +6,7 @@
 
   @media (max-width: breakpoints.$medium) {
     grid-template-columns: 1fr;
+    gap: 60px;
   }
 }
 
